--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -204,7 +204,7 @@
    ],
    "source": [
     "# enter your code here\n",
-    "orders = pd.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.csv\")\n",
+    "orders = pd.read_csv(\"./Orders.csv\")\n",
     "orders.head()"
    ]
   },
@@ -238,11 +238,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>CustomerType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent CustomerType  \n",
+       "0       2.55       17850  United Kingdom         15.30    Preferred  \n",
+       "1       3.39       17850  United Kingdom         20.34    Preferred  \n",
+       "2       2.75       17850  United Kingdom         22.00    Preferred  \n",
+       "3       3.39       17850  United Kingdom         20.34    Preferred  \n",
+       "4       3.39       17850  United Kingdom         20.34    Preferred  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "quantile_95 = orders.groupby('CustomerID')['amount_spent'].sum().quantile(.95)\n",
+    "quantile_75 = orders.groupby('CustomerID')['amount_spent'].sum().quantile(.75)\n",
+    "\n",
+    "#orders['Label'] = np.where(orders.groupby('CustomerID')['amount_spent'].sum() > quantile_95,'VIP',\n",
+    "#                          np.where(orders.groupby('CustomerID')['amount_spent'].sum(),'Preferred','NAN'))\n",
+    "orders['CustomerType'] = orders['CustomerID'].map(orders.groupby('CustomerID')['amount_spent'].sum()\n",
+    "                        .apply(lambda x: 'VIP' if x > quantile_95 else ('Preferred' if quantile_75 < x < quantile_95 else 'NA')).to_dict())\n",
+    "orders.head()"
    ]
   },
   {
@@ -251,8 +421,52 @@
    "source": [
     "Now we'll leave it to you to solve Q2 & Q3, which you can leverage from your solution for Q1:\n",
     "\n",
-    "# Q2: How to identify which country has the most VIP Customers?\n",
-    "\n",
+    "# Q2: How to identify which country has the most VIP Customers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerType  Country        \n",
+       "VIP           United Kingdom     84185\n",
+       "              EIRE                7077\n",
+       "              France              3290\n",
+       "              Germany             3127\n",
+       "              Netherlands         2080\n",
+       "              Australia            898\n",
+       "              Portugal             681\n",
+       "              Switzerland          594\n",
+       "              Spain                511\n",
+       "              Norway               420\n",
+       "              Channel Islands      364\n",
+       "              Finland              294\n",
+       "              Cyprus               248\n",
+       "              Singapore            222\n",
+       "              Japan                205\n",
+       "              Sweden               198\n",
+       "              Belgium               54\n",
+       "              Denmark               36\n",
+       "Name: Country, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.groupby('CustomerType')['Country'].value_counts().loc[['VIP']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Q3: How to identify which country has the most VIP+Preferred Customers combined?\n",
     "\n",
     "Provide your solution for Q2 below:"
@@ -260,11 +474,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom          221635.0\n",
+       "Germany                   7349.0\n",
+       "EIRE                      7238.0\n",
+       "France                    6301.0\n",
+       "Spain                     1569.0\n",
+       "Belgium                   1557.0\n",
+       "Switzerland               1370.0\n",
+       "Portugal                  1093.0\n",
+       "Norway                    1028.0\n",
+       "Australia                 1028.0\n",
+       "Channel Islands            589.0\n",
+       "Finland                    504.0\n",
+       "Cyprus                     451.0\n",
+       "Sweden                     273.0\n",
+       "Japan                      272.0\n",
+       "Denmark                    217.0\n",
+       "Austria                      NaN\n",
+       "Bahrain                      NaN\n",
+       "Brazil                       NaN\n",
+       "Canada                       NaN\n",
+       "Czech Republic               NaN\n",
+       "European Community           NaN\n",
+       "Greece                       NaN\n",
+       "Iceland                      NaN\n",
+       "Israel                       NaN\n",
+       "Italy                        NaN\n",
+       "Lebanon                      NaN\n",
+       "Lithuania                    NaN\n",
+       "Malta                        NaN\n",
+       "Netherlands                  NaN\n",
+       "Poland                       NaN\n",
+       "RSA                          NaN\n",
+       "Saudi Arabia                 NaN\n",
+       "Singapore                    NaN\n",
+       "USA                          NaN\n",
+       "United Arab Emirates         NaN\n",
+       "Unspecified                  NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "((orders.groupby(['Country','CustomerType'])['CustomerID'].size().unstack()['VIP']) \n",
+    "+ (orders.groupby(['Country','CustomerType'])['CustomerID'].size().unstack()['Preferred'])).sort_values(ascending = False)"
    ]
   }
  ],
@@ -284,9 +548,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
